css/ahnaf.css
@media only screen and (max-width: 767px) {

    html {
        text-align: center;
        font-family: 'Bungee Outline', cursive;
        margin: 0;
        padding: 0;

        background: url(images/nyc.jpg) no-repeat center center fixed;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
    }

    .title {
        font-size: 14vw;
        color: #ffffff;
        padding: 0;
    }

    .sub-title {
        font-family: 'Bungee Hairline', cursive;
        font-size: 8vw;
        color: #ffffff;
    }

    .main-button {
        font-family: 'Bungee Hairline', cursive;
        font-size: 7.5vw;
        color: #ffffff;
        margin-top: 5vw;

        width: 70%;

        border-style: solid;
        border-color: #ffffff;
        border-width: 0.5vw;
        border-radius: 2vw;

        background-color: rgba(100, 100, 100, 0.3);
        outline: 0;
    }
    .main-button:hover {
        background-color: rgba(100, 100, 100, 0.9);
    }
    .main-button-push {
        margin-top: 39vw;
    }

    .transition-all {
        transition: all 0.25s ease;
    }
}

